# src/swagger.json
@@ -44,6 +44,33 @@
     "application/json"
   ],
   "paths": {
+    "/user/login": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Login",
+        "description": "Login Page",
+        "operationId": "loginUser",
+        "produces": "application/xml,application/json",
+        "parameters": [
+          {
+            "name": "email_id",
+            "in": "body",
+            "required": "true",
+            "description": "Enter e-mail id & password"
+          }         
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Users"
+            }
+          }
+        }
+      }
+    },
     "/user": {
       "get": {
         "tags": [
